Android V1: align phone worker with Controller PR #116 contract