@@ -1,6 +1,5 @@
 package ai.tigeriq.worker.v07;
 
-import org.json.JSONArray;
 import org.json.JSONObject;
 
 import java.io.ByteArrayOutputStream;
@@ -13,145 +12,172 @@ import java.time.Instant;
 import java.util.Locale;
 import java.util.UUID;
 
-/** PC01 control-plane client only. It never sends prompts to PC01 for AI execution. */
+/** Controller V1 client. No Android session token exists: lease/result/heartbeat use device proof directly. */
 public final class TigerIqApiClient {
-    public static final String SESSION_PATH = "/v1/android/sessions", PULL_PATH = "/v1/android/jobs/pull", SUBMIT_PATH = "/v1/android/jobs/submit";
-    private static final int MAX_RESPONSE_BYTES = 512_000, CONNECT_TIMEOUT_MS = 15_000;
+    private static final int CONNECT_TIMEOUT_MS = 12_000;
+    private static final int READ_TIMEOUT_MS = 30_000;
+    private static final long LEASE_TTL_MS = 120_000L;
+
     private final EmployeeDeviceStore.Profile profile;
-    private final DeviceKeyStore deviceKey;
 
     public TigerIqApiClient(EmployeeDeviceStore.Profile profile) {
         if (profile == null) throw new IllegalArgumentException("profile required");
         this.profile = profile;
-        this.deviceKey = new DeviceKeyStore(profile.employeeId, profile.deviceId);
     }
 
-    public Session mintSession(String bootstrapToken) throws Exception {
-        JSONObject body = new JSONObject()
-                .put("employeeId", profile.employeeId)
-                .put("nodeId", profile.nodeId)
-                .put("deviceId", profile.deviceId)
-                .put("requestedScopes", new JSONArray().put("android:jobs:pull").put("android:jobs:submit"))
-                .put("client", new JSONObject().put("name", "tigeriq-android-ai-employee").put("version", "1.0.0"));
-        JSONObject response = request("POST", SESSION_PATH, body, Headers.bootstrap(profile.credentialId, bootstrapToken), 30_000);
-        JSONObject session = response.optJSONObject("session");
-        if (session == null) throw new ApiException(502, "INVALID_RESPONSE", "missing session response", false, null);
-        String accessToken = required(session, "accessToken"), employeeId = required(session, "employeeId"), nodeId = required(session, "nodeId"), deviceId = session.optString("deviceId", profile.deviceId);
-        if (!profile.employeeId.equals(employeeId) || !profile.nodeId.equals(nodeId) || !profile.deviceId.equals(deviceId)) throw new ApiException(409, "IDENTITY_MISMATCH", "session identity mismatch", false, null);
-        return new Session(accessToken, parseInstant(required(session, "expiresAt")));
+    public JSONObject requireControllerV1Ready() throws Exception {
+        JSONObject status = request("GET", ControllerV1Contract.STATUS_PATH, null, false);
+        ControllerV1Contract.requireCompatible(status);
+        return status;
     }
 
-    public PullResult pullJob(String sessionToken) throws Exception {
-        JSONObject response = request("POST", PULL_PATH, new JSONObject().put("employeeId", profile.employeeId).put("deviceId", profile.deviceId), Headers.session(sessionToken), 30_000);
-        JSONObject payload = unwrapData(response);
-        String kind = payload.optString("kind", "");
-        if ("empty".equals(kind)) return PullResult.empty();
-        JSONObject lease = payload.optJSONObject("lease");
-        if (!"job".equals(kind) || lease == null) throw new ApiException(502, "INVALID_RESPONSE", "invalid pull response", false, null);
-        if (!profile.employeeId.equals(required(lease, "employeeId")) || !profile.deviceId.equals(required(lease, "deviceId"))) throw new ApiException(409, "IDENTITY_MISMATCH", "job lease identity mismatch", false, null);
-        String bindingId = required(lease, "bindingId");
-        if (profile.bindingId != null && !profile.bindingId.isBlank() && !profile.bindingId.equals(bindingId)) throw new ApiException(409, "STALE_BINDING", "job lease binding mismatch", false, null);
-        JSONObject job = lease.optJSONObject("job");
-        if (job == null) throw new ApiException(502, "INVALID_RESPONSE", "lease missing job", false, null);
+    public LeaseResult leaseNextJob() throws Exception {
+        JSONObject body = new JSONObject().put("leaseTtlMs", LEASE_TTL_MS);
+        JSONObject response = request("POST", ControllerV1Contract.LEASE_PATH, body, true);
+        if (!response.optBoolean("ok", false)) throw new ApiException(502, "INVALID_RESPONSE", "lease response missing ok=true", true, null);
+        if (!response.has("lease") || response.isNull("lease")) return LeaseResult.empty();
+        JSONObject lease = response.optJSONObject("lease");
+        if (lease == null) throw new ApiException(502, "INVALID_RESPONSE", "lease object missing", true, null);
+
+        String employeeId = required(lease, "employeeId");
+        String deviceId = required(lease, "deviceId");
+        if (!profile.employeeId.equals(employeeId) || !profile.deviceId.equals(deviceId)) {
+            throw new ApiException(409, "IDENTITY_MISMATCH", "leased work identity does not match this phone", false, null);
+        }
         String jobId = required(lease, "jobId");
-        if (!jobId.equals(required(job, "jobId"))) throw new ApiException(409, "IDENTITY_MISMATCH", "lease job mismatch", false, null);
-        return PullResult.job(new DurableCheckpointStore.JobLease(jobId, required(job, "idempotencyKey"), bindingId, required(lease, "leaseId"), required(lease, "leaseToken"), parseInstant(required(lease, "expiresAt")), lease.optInt("attempt", 1), job.toString()));
+        String bindingId = required(lease, "bindingId");
+        String leaseId = required(lease, "leaseId");
+        String leaseToken = required(lease, "leaseToken");
+        String expiresAt = required(lease, "expiresAt");
+        int attempt = lease.optInt("attempt", 0);
+        if (attempt < 1) throw new ApiException(502, "INVALID_RESPONSE", "lease attempt invalid", true, null);
+        JSONObject job = lease.optJSONObject("job");
+        if (job == null) throw new ApiException(502, "INVALID_RESPONSE", "lease job missing", true, null);
+        if (!jobId.equals(required(job, "jobId"))) throw new ApiException(409, "JOB_ID_MISMATCH", "lease/job id mismatch", false, null);
+        String idempotencyKey = required(job, "idempotencyKey");
+        long expiresAtEpochMs;
+        try { expiresAtEpochMs = Instant.parse(expiresAt).toEpochMilli(); }
+        catch (Exception error) { throw new ApiException(502, "INVALID_RESPONSE", "lease expiresAt invalid", true, null); }
+        if (expiresAtEpochMs <= System.currentTimeMillis()) throw new ApiException(409, "LEASE_EXPIRED", "received lease already expired", true, null);
+
+        DurableCheckpointStore.JobLease checkpoint = new DurableCheckpointStore.JobLease(
+                jobId, idempotencyKey, bindingId, leaseId, leaseToken, expiresAtEpochMs, attempt, job.toString());
+        return LeaseResult.leased(checkpoint);
     }
 
-    public JSONObject submitResult(String sessionToken, JSONObject submitRequest) throws Exception {
-        JSONObject response = request("POST", SUBMIT_PATH, submitRequest, Headers.session(sessionToken), 30_000);
-        JSONObject payload = unwrapData(response);
-        if (payload.has("accepted") && !payload.optBoolean("accepted")) throw new ApiException(409, "RESULT_REJECTED", "result was not accepted", false, null);
-        return payload;
-    }
-
-    private JSONObject request(String method, String path, JSONObject body, Headers headers, int readTimeoutMs) throws Exception {
-        URL url = new URL(GatewayUrlPolicy.requireControllerUrl(profile.controllerUrl) + path);
-        byte[] bodyBytes = body == null ? new byte[0] : body.toString().getBytes(StandardCharsets.UTF_8);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        connection.setRequestMethod(method);
-        connection.setConnectTimeout(CONNECT_TIMEOUT_MS);
-        connection.setReadTimeout(readTimeoutMs);
-        connection.setUseCaches(false);
-        connection.setDoInput(true);
-        connection.setRequestProperty("Accept", "application/json");
-        connection.setRequestProperty("Content-Type", "application/json; charset=utf-8");
-        connection.setRequestProperty("Cache-Control", "no-store");
-        for (java.util.Iterator<String> it = headers.values.keys(); it.hasNext();) {
-            String name = it.next();
-            connection.setRequestProperty(name, headers.values.optString(name));
-        }
-        addDeviceProof(connection, method, path, bodyBytes);
-        if (bodyBytes.length > 0) {
-            connection.setDoOutput(true);
-            connection.setFixedLengthStreamingMode(bodyBytes.length);
-            try (java.io.OutputStream out = connection.getOutputStream()) { out.write(bodyBytes); }
-        }
-        int status;
-        byte[] responseBytes;
-        try {
-            status = connection.getResponseCode();
-            InputStream stream = status >= 200 && status < 300 ? connection.getInputStream() : connection.getErrorStream();
-            responseBytes = readLimited(stream);
-        } finally {
-            connection.disconnect();
-        }
-        JSONObject response;
-        try { response = responseBytes.length == 0 ? new JSONObject() : new JSONObject(new String(responseBytes, StandardCharsets.UTF_8)); }
-        catch (Exception parse) { throw new ApiException(status, "INVALID_RESPONSE", "PC01 returned invalid JSON", status >= 500, null); }
-        if (status < 200 || status >= 300) throw errorFromBody(status, response, status == 429 || status >= 500);
+    public JSONObject submitResult(String jobId, JSONObject body) throws Exception {
+        String path = ControllerV1Contract.resultPath(jobId);
+        JSONObject response = request("POST", path, body, true);
+        if (!response.optBoolean("ok", false)) throw new ApiException(502, "INVALID_RESPONSE", "result response missing ok=true", true, null);
+        JSONObject accepted = response.optJSONObject("result");
+        if (accepted == null) throw new ApiException(502, "INVALID_RESPONSE", "accepted result missing", true, null);
+        String acceptedJobId = accepted.optString("jobId", "").trim();
+        if (!acceptedJobId.isEmpty() && !jobId.equals(acceptedJobId)) throw new ApiException(409, "JOB_ID_MISMATCH", "accepted result belongs to another job", false, null);
         return response;
     }
 
-    private void addDeviceProof(HttpURLConnection connection, String method, String path, byte[] body) throws Exception {
-        long timestamp = System.currentTimeMillis();
+    public JSONObject heartbeat(String health, JSONObject metadata) throws Exception {
+        String safeHealth = health == null || health.isBlank() ? "degraded" : health.trim();
+        JSONObject body = new JSONObject().put("health", safeHealth)
+                .put("metadata", metadata == null ? new JSONObject() : metadata);
+        JSONObject response = request("POST", ControllerV1Contract.heartbeatPath(profile.deviceId), body, true);
+        if (response.length() > 0 && !response.optBoolean("ok", false)) throw new ApiException(502, "INVALID_RESPONSE", "heartbeat response missing ok=true", true, null);
+        return response;
+    }
+
+    private JSONObject request(String method, String path, JSONObject body, boolean protectedRequest) throws Exception {
+        byte[] bodyBytes = body == null ? new byte[0] : body.toString().getBytes(StandardCharsets.UTF_8);
+        HttpURLConnection connection = (HttpURLConnection) new URL(profile.controllerUrl + path).openConnection();
+        connection.setRequestMethod(method);
+        connection.setConnectTimeout(CONNECT_TIMEOUT_MS);
+        connection.setReadTimeout(READ_TIMEOUT_MS);
+        connection.setUseCaches(false);
+        connection.setRequestProperty("Accept", "application/json");
+        if (bodyBytes.length > 0) connection.setRequestProperty("Content-Type", "application/json; charset=utf-8");
+        if (protectedRequest) addDeviceProof(connection, method, path, bodyBytes);
+        if (bodyBytes.length > 0) {
+            connection.setDoOutput(true);
+            connection.setFixedLengthStreamingMode(bodyBytes.length);
+            connection.getOutputStream().write(bodyBytes);
+            connection.getOutputStream().flush();
+            connection.getOutputStream().close();
+        }
+
+        int status = connection.getResponseCode();
+        InputStream stream = status >= 200 && status < 300 ? connection.getInputStream() : connection.getErrorStream();
+        String raw = stream == null ? "" : new String(readAll(stream), StandardCharsets.UTF_8);
+        Long retryAfterMs = retryAfterMs(connection.getHeaderField("Retry-After"));
+        connection.disconnect();
+        JSONObject decoded;
+        try { decoded = raw.isBlank() ? new JSONObject() : new JSONObject(raw); }
+        catch (Exception error) { throw new ApiException(status, "INVALID_RESPONSE", "Controller returned non-JSON response", status >= 500, retryAfterMs); }
+        if (status < 200 || status >= 300) throw apiError(status, decoded, retryAfterMs);
+        return decoded;
+    }
+
+    private void addDeviceProof(HttpURLConnection connection, String method, String path, byte[] bodyBytes) throws Exception {
+        DeviceKeyStore deviceKey = new DeviceKeyStore(profile.employeeId, profile.deviceId);
+        deviceKey.ensureKey();
+        String fingerprint = deviceKey.publicKeyFingerprintSha256();
+        if (!fingerprint.equalsIgnoreCase(profile.publicKeyFingerprint)) throw new ApiException(409, "DEVICE_KEY_CHANGED", "Android Keystore identity changed", false, null);
+        String timestamp = Long.toString(System.currentTimeMillis());
         String nonce = UUID.randomUUID().toString();
-        String bodyHash = sha256(body);
-        String canonical = method + "\n" + path + "\n" + profile.employeeId + "\n" + profile.nodeId + "\n" + profile.deviceId + "\n" + timestamp + "\n" + nonce + "\n" + bodyHash;
+        String bodyHash = sha256(bodyBytes);
+        String canonical = method.toUpperCase(Locale.ROOT) + "\n" + path + "\n" + profile.employeeId + "\n" + profile.nodeId + "\n" + profile.deviceId + "\n" + timestamp + "\n" + nonce + "\n" + bodyHash;
         connection.setRequestProperty("X-TigerIQ-Device-Proof-V", "1");
         connection.setRequestProperty("X-TigerIQ-Employee-Id", profile.employeeId);
         connection.setRequestProperty("X-TigerIQ-Node-Id", profile.nodeId);
         connection.setRequestProperty("X-TigerIQ-Device-Id", profile.deviceId);
-        connection.setRequestProperty("X-TigerIQ-Device-Key-Fingerprint", deviceKey.publicKeyFingerprintSha256());
+        connection.setRequestProperty("X-TigerIQ-Device-Key-Fingerprint", fingerprint.toLowerCase(Locale.ROOT));
         connection.setRequestProperty("X-TigerIQ-Device-Public-Key", deviceKey.publicKeyBase64());
-        connection.setRequestProperty("X-TigerIQ-Device-Timestamp", Long.toString(timestamp));
+        connection.setRequestProperty("X-TigerIQ-Device-Timestamp", timestamp);
         connection.setRequestProperty("X-TigerIQ-Device-Nonce", nonce);
         connection.setRequestProperty("X-TigerIQ-Device-Challenge", sha256(canonical.getBytes(StandardCharsets.UTF_8)));
         connection.setRequestProperty("X-TigerIQ-Device-Signature", deviceKey.signCanonical(canonical));
     }
 
-    private static JSONObject unwrapData(JSONObject response) { JSONObject data = response.optJSONObject("data"); return data == null ? response : data; }
-    private static ApiException errorFromBody(int status, JSONObject body, boolean defaultRetryable) {
+    private static ApiException apiError(int status, JSONObject body, Long retryAfterMs) {
         JSONObject error = body.optJSONObject("error");
-        if (error == null) return new ApiException(status, "HTTP_" + status, "PC01 request failed", defaultRetryable, null);
-        String code = error.optString("code", "HTTP_" + status), message = error.optString("message", "PC01 request failed");
-        boolean retryable = error.has("retryable") ? error.optBoolean("retryable") : defaultRetryable;
-        Long retryAfterMs = error.has("retryAfterMs") && !error.isNull("retryAfterMs") ? error.optLong("retryAfterMs") : null;
+        String code = error == null ? "HTTP_" + status : error.optString("code", "HTTP_" + status);
+        String message = error == null ? "Controller request failed" : error.optString("message", "Controller request failed");
+        boolean retryable = status == 408 || status == 425 || status == 429 || status >= 500;
+        if (error != null && error.has("retriable")) retryable = error.optBoolean("retriable", retryable);
         return new ApiException(status, code, message, retryable, retryAfterMs);
     }
-    private static String required(JSONObject object, String key) throws ApiException { String value = object.optString(key, "").trim(); if (value.isEmpty()) throw new ApiException(502, "INVALID_RESPONSE", "missing " + key, false, null); return value; }
-    private static long parseInstant(String value) throws ApiException { try { return Instant.parse(value).toEpochMilli(); } catch (Exception error) { throw new ApiException(502, "INVALID_RESPONSE", "invalid timestamp", false, null); } }
-    private static byte[] readLimited(InputStream stream) throws Exception {
-        if (stream == null) return new byte[0];
-        try (InputStream input = stream; ByteArrayOutputStream out = new ByteArrayOutputStream()) {
-            byte[] buffer = new byte[8192]; int total = 0, read;
-            while ((read = input.read(buffer)) >= 0) {
-                total += read;
-                if (total > MAX_RESPONSE_BYTES) throw new ApiException(502, "RESPONSE_TOO_LARGE", "PC01 response too large", false, null);
-                out.write(buffer, 0, read);
-            }
-            return out.toByteArray();
+
+    private static String required(JSONObject object, String key) throws ApiException {
+        String value = object.optString(key, "").trim();
+        if (value.isEmpty()) throw new ApiException(502, "INVALID_RESPONSE", "missing " + key, true, null);
+        return value;
+    }
+
+    private static byte[] readAll(InputStream stream) throws Exception {
+        try (InputStream input = stream; ByteArrayOutputStream output = new ByteArrayOutputStream()) {
+            byte[] buffer = new byte[8192];
+            int read;
+            while ((read = input.read(buffer)) >= 0) output.write(buffer, 0, read);
+            return output.toByteArray();
         }
     }
-    private static String sha256(byte[] bytes) throws Exception { byte[] digest = MessageDigest.getInstance("SHA-256").digest(bytes); StringBuilder out = new StringBuilder(digest.length * 2); for (byte b : digest) out.append(String.format(Locale.ROOT, "%02x", b)); return out.toString(); }
 
-    public static final class Session { public final String accessToken; public final long expiresAtEpochMs; Session(String accessToken, long expiresAtEpochMs) { this.accessToken = accessToken; this.expiresAtEpochMs = expiresAtEpochMs; } }
-    public static final class PullResult { public final boolean empty; public final DurableCheckpointStore.JobLease lease; private PullResult(boolean empty, DurableCheckpointStore.JobLease lease) { this.empty = empty; this.lease = lease; } static PullResult empty() { return new PullResult(true, null); } static PullResult job(DurableCheckpointStore.JobLease lease) { return new PullResult(false, lease); } }
-    private static final class Headers {
-        final JSONObject values = new JSONObject();
-        static Headers bootstrap(String credentialId, String bearer) { return new Headers().put("Authorization", "Bearer " + requireSecret(bearer)).put("X-TigerIQ-Credential-Id", requireSecret(credentialId)); }
-        static Headers session(String bearer) { return new Headers().put("Authorization", "Bearer " + requireSecret(bearer)); }
-        Headers put(String name, String value) { try { values.put(name, value); return this; } catch (org.json.JSONException error) { throw new IllegalStateException("cannot build HTTP headers", error); } }
-        private static String requireSecret(String value) { if (value == null || value.trim().isEmpty()) throw new IllegalArgumentException("credential is required"); return value.trim(); }
+    private static String sha256(byte[] bytes) throws Exception {
+        byte[] digest = MessageDigest.getInstance("SHA-256").digest(bytes);
+        StringBuilder out = new StringBuilder(digest.length * 2);
+        for (byte value : digest) out.append(String.format(Locale.ROOT, "%02x", value));
+        return out.toString();
+    }
+
+    private static Long retryAfterMs(String raw) {
+        if (raw == null || raw.isBlank()) return null;
+        try { return Math.max(0L, Long.parseLong(raw.trim()) * 1000L); }
+        catch (Exception ignored) { return null; }
+    }
+
+    public static final class LeaseResult {
+        public final boolean empty;
+        public final DurableCheckpointStore.JobLease lease;
+        private LeaseResult(boolean empty, DurableCheckpointStore.JobLease lease) { this.empty = empty; this.lease = lease; }
+        static LeaseResult empty() { return new LeaseResult(true, null); }
+        static LeaseResult leased(DurableCheckpointStore.JobLease lease) { return new LeaseResult(false, lease); }
     }
 }
